--- a/roles/osa-prep/tasks/main.yml
+++ b/roles/osa-prep/tasks/main.yml
@@ -136,7 +136,6 @@
     - common
     - test
 
-
 - name: Reboot LBs?
   debug:
     msg: "LB Reboot required"
@@ -205,6 +204,17 @@
     - upgrade
     - common
 
+- name: Restart LBs
+  shell: sleep 2 && shutdown -r now "Ansible triggered restart"
+  async: 1
+  poll: 0
+  become: true
+  ignore_errors: true
+  when: (inventory_hostname | search("lb")) and (stat_result.stat.exists == True)
+  tags:
+    - upgrade
+    - common
+
 - name: Wait for Controller Nodes to reboot
   local_action: wait_for host={{ ansible_hostname }} state=started delay=20 timeout=30
   become: false
@@ -218,6 +228,14 @@
   local_action: wait_for host={{ ansible_hostname }} state=started delay=20 timeout=30
   become: false
   when: (inventory_hostname | search("compute")) and (stat_result.stat.exists == True)
+  tags:
+    - upgrade
+    - common
+
+- name: Wait for LB Nodes to reboot
+  local_action: wait_for host={{ ansible_hostname }} state=started delay=20 timeout=30
+  become: false
+  when: (inventory_hostname | search("lb")) and (stat_result.stat.exists == True)
   tags:
     - upgrade
     - common
