--- a/roles/osa-prep/tasks/main.yml
+++ b/roles/osa-prep/tasks/main.yml
@@ -75,7 +75,7 @@
     src: files/interfaces
     dest: /etc/network/interfaces
     backup: yes
-  when: (ansible_os_family == "Debian") and (ansible_hostname <> "lb01")
+  when: (ansible_os_family == "Debian") and (ansible_hostname != "lb01")
   tags:
     - networking
     - ubuntu
