--- a/roles/osa-deploy/tasks/main.yml
+++ b/roles/osa-deploy/tasks/main.yml
@@ -4,7 +4,7 @@
   shell: ./scripts/bootstrap-ansible.sh args1 args2
   args:
     chdir: /opt/openstack-ansible
-    creates: /opt/ansible_v*
+    creates: /opt/openstack-ansible
   # environment: 
   #   BOOTSTRAP_OPTS: bootstrap_host_data_disk_device=sdb
   tags: bootstrap-ansible
