--- a/roles/osa-deploy/tasks/main.yml
+++ b/roles/osa-deploy/tasks/main.yml
@@ -40,7 +40,7 @@
 - name: Check user_secrets
   shell: "grep keystone_auth_admin_password /etc/openstack_deploy/user_secrets.yml | awk '{print $2}'"
   register: user_secrets
-  no_log: true
+  # no_log: true
   tags: 
     - user_secrets
     - test
@@ -48,6 +48,9 @@
 - debug:
     var: user_secrets
     verbosity: 2
+  tags: 
+    - user_secrets
+    - test
 
 
 
