--- a/roles/osa-deploy/tasks/main.yml
+++ b/roles/osa-deploy/tasks/main.yml
@@ -56,7 +56,7 @@
   shell: python pw-token-gen.py --file /etc/openstack_deploy/user_secrets.yml
   args:
     chdir: /opt/openstack-ansible/scripts
-  when: user_secrets.stdout_lines != " "
+  when: user_secrets.stdout_lines=[]
   tags: 
     - user_secrets
     - test
