--- a/roles/osa-prep/tasks/main.yml
+++ b/roles/osa-prep/tasks/main.yml
@@ -76,11 +76,23 @@
     dest: /etc/network/interfaces
     backup: yes
   when: (ansible_os_family == "Debian") and (inventory_hostname | search("co"))
+  register: bridges
   tags:
     - networking
     - ubuntu
 
+- name: Debug Networking
+  debug: bridges.stdout.changed
+    - networking
+  when: inventory_hostname | search("co")
 
+- name: Restart Networking
+    shell: ip addr flush enp0s8 && ip addr flush enp0s9 && ip addr flush enp0s10 && ip addr flush enp0s16 && systemctl restart networking.service
+    when: (ansible_os_family == "Debian") and (inventory_hostname | search("co")) and (bridges.stdout.changed == true)
+  tags:
+    - networking
+    - ubuntu
+    
 # - name: Debug IPs
 #   debug: 
 #     # var: ansible_all_ipv4_addresses
