--- a/roles/osa-prep/tasks/main.yml
+++ b/roles/osa-prep/tasks/main.yml
@@ -82,7 +82,9 @@
     - ubuntu
 
 - name: Debug Networking
-  debug: bridges.stdout.changed
+  debug: 
+    var: bridges.stdout.changed
+    verbosity: 2
   when: inventory_hostname | search("co")
   tags:
     - networking
