--- a/roles/osa-prep/tasks/main.yml
+++ b/roles/osa-prep/tasks/main.yml
@@ -83,7 +83,7 @@
 
 - name: Debug Networking
   debug: 
-    var: bridges.result.stdout.changed
+    var: bridges.changed
     verbosity: 2
   when: inventory_hostname | search("co")
   tags:
@@ -91,7 +91,7 @@
 
 - name: Restart Networking
   shell: "ip addr flush enp0s8 && ip addr flush enp0s9 && ip addr flush enp0s10 && ip addr flush enp0s16 && systemctl restart networking.service"
-  when: (ansible_os_family == "Debian") and (inventory_hostname | search("co")) and (bridges.result.stdout.changed == true)
+  when: (ansible_os_family == "Debian") and (inventory_hostname | search("co")) and (bridges.changed == true)
   tags:
     - networking
     - ubuntu
