--- a/roles/data-disk/tasks/main.yml
+++ b/roles/data-disk/tasks/main.yml
@@ -24,19 +24,19 @@
 - parted:
     device: /dev/sdc
     number: 1
-    state: present
+    state: absent
 
-- name: Create filesystem
-  filesystem: 
-    fstype: xfs 
-    dev: /dev/sdc1 
-    opts: "-i size=1024"
-  tags:
-    - filesystem
+# - name: Create filesystem
+#   filesystem: 
+#     fstype: xfs 
+#     dev: /dev/sdc1 
+#     opts: "-i size=1024"
+#   tags:
+#     - filesystem
 
 - name: Mount /dev/sdc1
   mount:
     path: /media/data_disk
     src: /dev/sdc1
     fstype: xfs
-    state: mounted
+    state: absent
