--- a/files/user_variables.yml
+++ b/files/user_variables.yml
@@ -32,6 +32,18 @@ glance_swift_store_key: '{{ '{{' }} glance_service_password {{ '}}' }}'
 glance_swift_store_region: RegionOne
 glance_swift_store_user: 'service:glance'
 
+## Nova options
+nova_virt_type: qemu
+nova_cpu_allocation_ratio: 3.0 
+nova_ram_allocation_ratio: 1.0
+# As this is a virtual env, don't lose precious memory to the VM itself!
+nova_reserved_host_memory_mb: 1024
+
+# Neutron options
+neutron_l2_population: true
 
 ## HAProxy
-haproxy_use_keepalived: False
+haproxy_use_keepalived: false
+
+## Security Hardening
+apply_security_hardening: false
