--- a/roles/data-disk/tasks/main.yml
+++ b/roles/data-disk/tasks/main.yml
@@ -21,48 +21,59 @@
   tags: 
     - disk-tools
 
+- name: Create parition
+  parted:
+    device: /dev/sdc
+    number: 1
+    state: present
 
-# - name: Create parition
-#   parted:
-#     device: /dev/sdc
-#     number: 1
-#     state: present
+- name: Create filesystem
+  filesystem: 
+    fstype: ext4 
+    dev: /dev/sdc1 
+    opts: "-i size=1024"
+  tags:
+    - filesystem
 
-# - name: Create filesystem
-#   filesystem: 
-#     fstype: xfs 
-#     dev: /dev/sdc1 
-#     opts: "-i size=1024"
-#   tags:
-#     - filesystem
+- name: Mount /dev/sdc1
+  mount:
+    path: /media/data_disk
+    src: /dev/sdc1
+    fstype: ext4
+    state: mounted
 
-# - name: Mount /dev/sdc1
+- name: Create LXC Volume Group
+  lvg:
+    vg: lxc
+    pvs: /dev/sdc1
+  when: inventory_hostname | search("controller")
+
+# # Following lines added to remove mounts and partions to enable testing
+
+# # Remove LXC Volume Group 
+# - name: Remove LXC Volume Group
+#   lvg:
+#     vg: lxc
+#     state: absent
+
+# # Remove mount from /etc/fstab
+# - name: Remove auto mount /dev/sdc1
 #   mount:
 #     path: /media/data_disk
 #     src: /dev/sdc1
 #     fstype: xfs
-#     state: mounted
+#     state: absent
 
+# # Unmmount existing mounts
+# - name: Unmount /dev/sdc1
+#   mount:
+#     path: /media/data_disk
+#     src: /dev/sdc1
+#     fstype: xfs
+#     state: unmounted
 
-# Following lines added to remove mounts and partions from existing snapshotted env
-# Remove mount from /etc/fstab
-- name: Mount /dev/sdc1
-  mount:
-    path: /media/data_disk
-    src: /dev/sdc1
-    fstype: xfs
-    state: absent
-
-# Unmmount existing mounts
-- name: Mount /dev/sdc1
-  mount:
-    path: /media/data_disk
-    src: /dev/sdc1
-    fstype: xfs
-    state: unmounted
-
-# Remove all partitions from disk
-- parted:
-    device: /dev/sdc
-    number: 1
-    state: absent
+# # Remove all partitions from disk
+# - parted:
+#     device: /dev/sdc
+#     number: 1
+#     state: absent
