--- a/roles/data-disk/tasks/main.yml
+++ b/roles/data-disk/tasks/main.yml
@@ -31,7 +31,7 @@
   filesystem: 
     fstype: ext4 
     dev: /dev/sdc1 
-    opts: "-i size=1024"
+    #opts: "-i size=1024"
     force: yes
   tags:
     - filesystem
