--- a/roles/data-disk/tasks/main.yml
+++ b/roles/data-disk/tasks/main.yml
@@ -21,6 +21,29 @@
   tags: 
     - disk-tools
 
+# Remove mount from /etc/fstab
+- name: Remove auto mount /dev/sdc1
+  mount:
+    path: /media/data_disk
+    src: /dev/sdc1
+    fstype: xfs
+    state: absent
+
+# Unmmount existing mounts
+- name: Unmount /dev/sdc1
+  mount:
+    path: /media/data_disk
+    src: /dev/sdc1
+    fstype: xfs
+    state: unmounted
+
+# Remove all partitions from disk
+- parted:
+    device: /dev/sdc
+    number: 1
+    state: absent
+
+
 - name: Create parition
   parted:
     device: /dev/sdc
