--- a/roles/data-disk/tasks/main.yml
+++ b/roles/data-disk/tasks/main.yml
@@ -21,31 +21,6 @@
   tags: 
     - disk-tools
 
-# Remove mount from /etc/fstab
-- name: Remove auto mount /dev/sdc1
-  mount:
-    path: /media/data_disk
-    src: /dev/sdc1
-    state: absent
-  tags: 
-    - cleanup
-
-# Unmmount existing mounts
-- name: Unmount /dev/sdc1
-  mount:
-    path: /media/data_disk
-    state: unmounted
-  tags: 
-    - cleanup
-
-# Remove all partitions from disk
-- parted:
-    device: /dev/sdc
-    number: 1
-    state: absent
-  tags: 
-    - cleanup
-
 - name: Create parition
   parted:
     device: /dev/sdc
@@ -70,7 +45,7 @@
 - name: Create LXC Volume Group
   lvg:
     vg: lxc
-    pvs: /dev/sdc1
+    pvs: /dev/sdc
   when: inventory_hostname | search("controller")
 
 # # Following lines added to remove mounts and partions to enable testing
@@ -80,25 +55,32 @@
 #   lvg:
 #     vg: lxc
 #     state: absent
+#   tags: 
+#     - cleanup
 
 # # Remove mount from /etc/fstab
 # - name: Remove auto mount /dev/sdc1
 #   mount:
 #     path: /media/data_disk
 #     src: /dev/sdc1
-#     fstype: xfs
 #     state: absent
+#   tags: 
+#     - cleanup
 
 # # Unmmount existing mounts
 # - name: Unmount /dev/sdc1
 #   mount:
 #     path: /media/data_disk
-#     src: /dev/sdc1
-#     fstype: xfs
 #     state: unmounted
+#   tags: 
+#     - cleanup
 
 # # Remove all partitions from disk
 # - parted:
 #     device: /dev/sdc
 #     number: 1
 #     state: absent
+#   tags: 
+#     - cleanup
+
+
