--- a/roles/data-disk/tasks/main.yml
+++ b/roles/data-disk/tasks/main.yml
@@ -11,48 +11,48 @@
   when: ansible_os_family == "Debian"
   tags: update
 
-- name: Install Disk Tools
-  package: 
-    name: "{{ item }}"
-    state: present
-  with_items:
-    - parted
-    - xfsprogs
-  tags: 
-    - disk-tools
+# - name: Install Disk Tools
+#   package: 
+#     name: "{{ item }}"
+#     state: present
+#   with_items:
+#     - parted
+#     - xfsprogs
+#   tags: 
+#     - disk-tools
 
-- name: Create parition
-  parted:
-    device: /dev/sdc
-    number: 1
-    state: present
+# - name: Create parition
+#   parted:
+#     device: /dev/sdc
+#     number: 1
+#     state: present
 
-- name: Create filesystem
-  filesystem: 
-    fstype: ext4 
-    dev: /dev/sdc1 
-    #opts: "-i size=1024"
-  tags:
-    - filesystem
+# - name: Create filesystem
+#   filesystem: 
+#     fstype: ext4 
+#     dev: /dev/sdc1 
+#     #opts: "-i size=1024"
+#   tags:
+#     - filesystem
 
-- name: Mount /dev/sdc1
-  mount:
-    path: /media/data_disk
-    src: /dev/sdc1
-    fstype: ext4
-    state: mounted
+# - name: Mount /dev/sdc1
+#   mount:
+#     path: /media/data_disk
+#     src: /dev/sdc1
+#     fstype: ext4
+#     state: mounted
 
 - name: Create LXC Volume Group
   lvg:
     vg: lxc
-    pvs: /dev/sdc1
+    pvs: /dev/sdc
   when: inventory_hostname | search("controller")
 
 
 - name: Create Cinder Volume Group
   lvg:
     vg: cinder-volumes
-    pvs: /dev/sdc1
+    pvs: /dev/sdc
   when: inventory_hostname | search("compute")
 
 # # Following lines added to remove mounts and partions to enable testing
