--- a/roles/osa-prep/tasks/main.yml
+++ b/roles/osa-prep/tasks/main.yml
@@ -26,6 +26,15 @@
     - packages
     - ubuntu
 
+
+- name: Install  ansible on controller01
+  apt: name={{ item }} state=present
+  with_items:
+    - ansible
+  when: inventory_hostname | search("controller01")
+  tags:
+    - packages
+
 - name: Upgrade CentOS
   yum:
     name: '*'
