--- a/roles/osa-deploy/tasks/main.yml
+++ b/roles/osa-deploy/tasks/main.yml
@@ -12,7 +12,7 @@
   shell: ./scripts/bootstrap-ansible.sh
   args:
     chdir: /opt/openstack-ansible
-  when: bootstrap.stat.isdir is defined and bootstrap.stat.isdir == false
+  when: bootstrap.exists == false
   tags: 
     - bootstrap-ansible
 
