--- a/roles/osa-deploy/tasks/main.yml
+++ b/roles/osa-deploy/tasks/main.yml
@@ -8,6 +8,12 @@
   tags: 
     - bootstrap-ansible
 
+- debug:
+    var: bootstrap
+    verbosity: 2
+  tags: 
+    - bootstrap-ansible
+    
 - name: Bootstrap Ansible
   shell: ./scripts/bootstrap-ansible.sh
   args:
