--- a/roles/osa-deploy/tasks/main.yml
+++ b/roles/osa-deploy/tasks/main.yml
@@ -13,12 +13,12 @@
     verbosity: 2
   tags: 
     - bootstrap-ansible
-    
+
 - name: Bootstrap Ansible
   shell: ./scripts/bootstrap-ansible.sh
   args:
     chdir: /opt/openstack-ansible
-  when: bootstrap.exists == false
+  when: bootstrap.stat.exists == false
   tags: 
     - bootstrap-ansible
 
