--- a/roles/osa-prep/tasks/main.yml
+++ b/roles/osa-prep/tasks/main.yml
@@ -20,7 +20,7 @@
     - bridge-utils
     - git
     - python-dev
-    - python-yaml
+    # - python-yaml
   when: ansible_os_family == "Debian"
   tags:
     - packages
