--- a/vagrant_site.yml
+++ b/vagrant_site.yml
@@ -3,6 +3,7 @@
 ### base build start ###
 - import_playbook: copy-keys.yml
 - import_playbook: data-disk.yml
+- import_playbook: swift-disks.yml
 - import_playbook: ntp-server.yml
 - import_playbook: ntp-client.yml
 - import_playbook: generate-key.yml
